--- a/components/rentals/rental_bids.jade
+++ b/components/rentals/rental_bids.jade
@@ -6,7 +6,7 @@ template(name='rental_bids')
                 //-     |$#{hourly_dollars}
                 //-     small /hr
                 .ui.large.header 
-                    |$#{minimum_hourly}
+                    |$#{minimum_bid}
                     small /hr minimum
                 .ui.large.header 
                     small auction cutoff
