--- a/client/fields.jade
+++ b/client/fields.jade
@@ -878,7 +878,7 @@ template(name='signature_view')
 
 template(name='boolean_edit')
     //- div
-    .pointer.ui.button.toggle_boolean(class="#{boolean_toggle_class} #{classes}" title=title)
+    .pointer.ui.button.toggle_boolean(class="#{boolean_toggle_class} #{classes}" title=tooltip)
         if field_value
             i.green.checkmark.icon
         else
